github actions vol2

--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -1,14 +1,18 @@
 name: Python Ruff & Black
 run-name: ${{ github.actor }} triggered workflow ${{ github.workflow }} from branch ${{ github.ref }}
-on: [push]
+on: [push, pull_request]
 jobs:
-  Explore-GitHub-Actions:
+  linter_name:
+    name: runner / black formatter
     runs-on: ubuntu-latest
     steps:
-      - name: Run black formatter           
-        uses: rickstaa/action-black@v1.3.1
-      - name: Ruff Check
-        uses: jpetrucciani/ruff-check@0.1.0
+      - uses: actions/checkout@v2
+      - uses: rickstaa/action-black@v1
+        with:
+          black_args: ". --check"
+      - uses: jpetrucciani/ruff-check@main
+        with:
+          path: '.'
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
 # - name: Run black formatter           
