--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: rickstaa/action-black@v1
         with:
-          black_args: ". --check"
+          black_args: "."
       - uses: jpetrucciani/ruff-check@main
         with:
           path: '.'
