--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: rickstaa/action-black@v1
         with:
           black_args: "."
-      - uses: jpetrucciani/ruff-check@main
+      - uses: chartboost/ruff-action@v1
         with:
           path: '.'
       - run: echo "🍏 This job's status is ${{ job.status }}."
