--- a/input/config.json
+++ b/input/config.json
@@ -4,8 +4,8 @@
         "height": 100,
         "depth": 5,
         "viscosity": 0.1,
-        "time_delta": 0.1,
-        "cell_length": 0.001
+        "time_delta": 0.5,
+        "cell_length": 0.01
     },
     "boundaries": [
         {
@@ -63,13 +63,47 @@
                 "x": 0,
                 "y": 0,
                 "z": 0,
+                "width": 200,
+                "height": 200,
+                "depth": 200
+            },
+            "data": {
+                "boltzmann_f19": [
+                    10.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0
+                ]
+            }
+        },
+        {
+            "boundary_type": "initial",
+            "cube": {
+                "x": 0,
+                "y": 0,
+                "z": 0,
                 "width": 20,
                 "height": 20,
                 "depth": 20
             },
             "data": {
                 "boltzmann_f19": [
-                    0.2,
+                    5.2,
                     0.1,
                     0.1,
                     0.1,
@@ -81,13 +115,13 @@
                     0.005,
                     0.005,
                     0.005,
-                    0.005,
-                    0.005,
-                    0.005,
+                    0.2,
+                    0.105,
+                    0.305,
                     0.001,
+                    0.02,
                     0.001,
-                    0.001,
-                    0.001
+                    0.1
                 ]
             }
         }
