--- a/input/config.json
+++ b/input/config.json
@@ -1,8 +1,8 @@
 {
     "fluid_box": {
-        "width": 100,
-        "height": 100,
-        "depth": 20,
+        "width": 150,
+        "height": 150,
+        "depth": 5,
         "viscosity": 0.001,
         "time_delta": 0.125,
         "cell_length": 0.05
@@ -11,12 +11,12 @@
         {
             "boundary_type": "no-slip",
             "cube": {
-                "x": 2,
-                "y": 2,
-                "z": 2,
-                "width": 2,
-                "height": 2,
-                "depth": 2
+                "x": 45,
+                "y": 45,
+                "z": 0,
+                "width": 10,
+                "height": 10,
+                "depth": 200
             },
             "data": {
             }
@@ -69,7 +69,7 @@
             },
             "data": {
                 "boltzmann_f19": [
-                    1.0,
+                    0.5,
                     0.0,
                     0.0,
                     0.0,
@@ -94,34 +94,68 @@
         {
             "boundary_type": "initial",
             "cube": {
-                "x": 0,
-                "y": 0,
+                "x": 20,
+                "y": 20,
                 "z": 0,
+                "width": 20,
+                "height": 20,
+                "depth": 200
+            },
+            "data": {
+                "boltzmann_f19": [
+                    0.5,
+                    0.1,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0
+                ]
+            }
+        },
+        {
+            "boundary_type": "initial",
+            "cube": {
+                "x": 50,
+                "y": 25,
+                "z": 40,
                 "width": 20,
                 "height": 20,
                 "depth": 20
             },
             "data": {
                 "boltzmann_f19": [
-                    5.2,
-                    0.1,
-                    0.1,
-                    0.1,
                     0.5,
-                    2.1,
-                    0.02,
-                    0.02,
-                    0.02,
-                    0.005,
-                    0.005,
-                    0.005,
+                    0.1,
                     0.2,
-                    0.105,
-                    0.305,
-                    0.001,
-                    0.02,
-                    0.001,
-                    0.1
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0,
+                    0.0
                 ]
             }
         }
