--- a/input/config.json
+++ b/input/config.json
@@ -24,6 +24,19 @@
         {
             "boundary_type": "no-slip",
             "cube": {
+                "x": 85,
+                "y": 45,
+                "z": 0,
+                "width": 10,
+                "height": 10,
+                "depth": 200
+            },
+            "data": {
+            }
+        },
+        {
+            "boundary_type": "no-slip",
+            "cube": {
                 "x": 0,
                 "y": 0,
                 "z": 0,
@@ -76,46 +89,23 @@
         {
             "boundary_type": "constant-velocity",
             "cube": {
-                "x": 5,
+                "x": 10,
                 "y": 5,
-                "z": 5,
-                "width": 2,
-                "height": 2,
-                "depth": 2
+                "z": 0,
+                "width": 1,
+                "height": 190,
+                "depth": 20
             },
             "data": {
                 "velocity": {
-                    "x": 0.1,
-                    "y": 0.1,
-                    "z": 0.1
+                    "x": 0.05,
+                    "y": 0.0,
+                    "z": 0.0
                 },
                 "normal_direction": {
-                    "x": 0.0,
-                    "y": 2.0,
-                    "z": 1.0
-                }
-            }
-        },
-        {
-            "boundary_type": "constant-velocity",
-            "cube": {
-                "x": 5,
-                "y": 5,
-                "z": 5,
-                "width": 2,
-                "height": 2,
-                "depth": 2
-            },
-            "data": {
-                "velocity": {
-                    "x": -0.5,
-                    "y": -0.1,
-                    "z": 0.1
-                },
-                "normal_direction": {
-                    "x": -1.0,
-                    "y": 2.0,
-                    "z": 1.0
+                    "x": 1.0,
+                    "y": 0.0,
+                    "z": 0.0
                 }
             }
         },
@@ -158,7 +148,7 @@
             "cube": {
                 "x": 20,
                 "y": 20,
-                "z": 0,
+                "z": -1000,
                 "width": 20,
                 "height": 20,
                 "depth": 200
@@ -192,7 +182,7 @@
             "cube": {
                 "x": 50,
                 "y": 25,
-                "z": 0,
+                "z": -1000,
                 "width": 20,
                 "height": 20,
                 "depth": 20
